cli version of https://github.com/dockstore/dockstore/pull/4792
and https://github.com/dockstore/dockstore/pull/5279